	parse_outofband_2_0_workaround_flags,
	parse_inband_workaround_flags): New functions.

	* bmc-config/, bmc-info/, ipmi-chassis/, ipmi-fru/, ipmi-sel/,
	ipmi-sensors/, pef-config/: Update manpages and command line
	option code.

	* ipmipower/, ipmiconsole/: Use common workaround parses in
	argp-common.
	
	* doc/freeipmi-workarounds.txt: New file.
	
	* doc/Makefile.am: Updated appropriately.
	
	Misc:

	* Globally remove IPMI_MAX_AUTHENTICATION_CODE_LENGTH.  Use
	IPMI_1_5_MAX_PASSWORD_LENGTH and IPMI_2_0_MAX_PASSWORD_LENGTH as
	needed.

	* General code cleanup throughout.
	
2007-06-27  Albert Chu <chu11@llnl.gov>
 
	* ipmi-fru/: New project.

	* COPYING.ipmi-fru, DISCLAIMER.ipmi-fru: New files.

	* libfreeipmi/include/freeipmi/udm/ipmi-fru-inventory-device-cmds-udm.h
	libfreeipmi/include/freeipmi/ipmi-fru-inventory-device-cmds.h
 	libfreeipmi/include/freeipmi/ipmi-fru-information-storage-definition.h
 	libfreeipmi/src/udm/ipmi-fru-inventory-device-cmds-udm.c
 	libfreeipmi/src/ipmi-fru-inventory-device-cmds.c
 	libfreeipmi/src/ipmi-fru-information-storage-definition.c: New files.

	* configure.ac, Makefile.am, freeipmi.spec.in: Update
	appropriately for new projct and new files.

	* libfreeipmi/src/ipmi-error.c (ipmi_strerror_r),
	libfreeipmi/include/freeipmi/ipmi-comp-code-spec.h: Add FRU
	completion codes/strings.
	
2007-06-27 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/ipmi-lan.c,
	libfreeipmi/include/freeipmi/ipmi-lan.h (fill_lan_session_hdr):
	Rename inbound_sequence_number to session_sequence_number for
	consistency.

	* ipmidetect/ipmidetectd.8.in: Fix typos from manpage cut and
	paste.

	* ipmidetect/: Fix cut and paste typo in GPL release headers.

2007-06-26 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/udm/ipmi-lan-interface-udm.c
	(ipmi_lan_open_session): Call get authentication capabilities with
	configured privilege, not user.

	* libfreeipmi/src/udm/ipmi-lan-interface-udm.c (ipmi_lan_cmd_raw):