@@ -101,6 +101,11 @@
 	* doc/freeipmi-workarounds.txt: New file.
 	
 	* doc/Makefile.am: Updated appropriately.
+
+	Unify code:
+
+	* ipmipower/, ipmiconsole/: Where appropriate, adjust command line
+	options to match the rest of FreeIPMI.
 	
 	Misc:
 
